Fix brand logo overlaping nav items on certain screen sizes.
- Adjust the size of the KCC-word-logo SVG (used as the brand) so it doesn't
overlap nav item's on any screen sizes.
- Add css transision to brand logo.

--- a/assets/scss/1-base/_header-global.scss
+++ b/assets/scss/1-base/_header-global.scss
@@ -224,9 +224,16 @@
   & .st0 {
     fill: none;
   }
+  transition: all .5s ease-in-out;
 }
 
 @media screen and (min-width: 992px) and (max-width: 1040px) { // the KCC word logo needs to shrink a little bit at these screen sizes
+  .header-global__brand--svg {
+    height: 22px;
+  }
+}
+
+@media screen and (min-width: 1041px) {
   .header-global__brand--svg {
     height: 26px;
   }
